Change about window

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Tramesa avalua
 log.event.submission_assessments_cleared                        = S'ha suprimit les avaluacions de la tramesa
 log.event.submission_confirmation_form_viewed                   = S'ha visualitzat el formulari de confirmaci\u00F3 de la tramesa.
 log.event.submission_created                                    = S'ha creat la tramesa.
+log.event.submission_created_                                   = S'ha creat la tramesa.
 log.event.submission_deleted                                    = Tramesa esborrada
+log.event.submission_deleted_                                   = Tramesa esborrada
 log.event.submission_form_viewed                                = S'ha visualitzat el formulari de tramesa.
 log.event.submission_reassessed                                 = S'ha reavaluat la tramesa
 log.event.submission_updated                                    = S'ha actualitzat la tasca.
+log.event.submission_updated_                                   = S'ha actualitzat la tasca.
 log.event.submission_viewed                                     = S'ha mostrat la tramesa
+log.event.submission_viewed_                                    = S'ha mostrat la tramesa
 log.event.submitted_scorm_raw_score                             = Submitted SCORM raw score
 log.event.submitted_scorm_status                                = Submitted SCORM status
 log.event.subscribers_viewed                                    = S'han mostrat el subscriptors
