--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Submission ass
 log.event.submission_assessments_cleared                        = Submission assessments cleared
 log.event.submission_confirmation_form_viewed                   = Submission confirmation form viewed.
 log.event.submission_created                                    = Submission created.
+log.event.submission_created_                                   = Submission created.
 log.event.submission_deleted                                    = Submission deleted
+log.event.submission_deleted_                                   = Submission deleted
 log.event.submission_form_viewed                                = Submission form viewed.
 log.event.submission_reassessed                                 = Submission re-assessed
 log.event.submission_updated                                    = Submission updated.
+log.event.submission_updated_                                   = Submission updated.
 log.event.submission_viewed                                     = Submission viewed
+log.event.submission_viewed_                                    = Submission viewed
 log.event.submitted_scorm_raw_score                             = Submitted SCORM raw score
 log.event.submitted_scorm_status                                = Submitted SCORM status
 log.event.subscribers_viewed                                    = Subscribers viewed
