--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Entrega evalua
 log.event.submission_assessments_cleared                        = Env\u00EDos de valoraciones limpiados
 log.event.submission_confirmation_form_viewed                   = Formulario de confirmaci\u00F3n de entrega visto.
 log.event.submission_created                                    = Entrega creada.
+log.event.submission_created_                                   = Entrega creada.
 log.event.submission_deleted                                    = Env\u00EDo borrado
+log.event.submission_deleted_                                   = Env\u00EDo borrado
 log.event.submission_form_viewed                                = Formulario de entrega visto.
 log.event.submission_reassessed                                 = Entrega re-evaluada
 log.event.submission_updated                                    = Env\u00EDo actualizado.
+log.event.submission_updated_                                   = Env\u00EDo actualizado.
 log.event.submission_viewed                                     = Entrega vista
+log.event.submission_viewed_                                    = Entrega vista
 log.event.submitted_scorm_raw_score                             = Enviada puntuaci\u00F3n bruta SCORM
 log.event.submitted_scorm_status                                = Enviado estatus SCORM
 log.event.subscribers_viewed                                    = Suscriptores visualizados
