--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Travail evalu\
 log.event.submission_assessments_cleared                        = \u00C9valuations de travail effac\u00E9es
 log.event.submission_confirmation_form_viewed                   = Formulaire de confirmation de remise consult\u00E9
 log.event.submission_created                                    = Travail de devoir cr\u00E9\u00E9
+log.event.submission_created_                                   = Travail de devoir cr\u00E9\u00E9
 log.event.submission_deleted                                    = Travail supprim\u00E9
+log.event.submission_deleted_                                   = Travail supprim\u00E9
 log.event.submission_form_viewed                                = Formulaire de remise consult\u00E9
 log.event.submission_reassessed                                 = Travail r\u00E9-\u00E9valu\u00E9
 log.event.submission_updated                                    = Travail de devoir modifi\u00E9
+log.event.submission_updated_                                   = Travail de devoir modifi\u00E9
 log.event.submission_viewed                                     = Travail consult\u00E9
+log.event.submission_viewed_                                    = Travail consult\u00E9
 log.event.submitted_scorm_raw_score                             = Score brut SCORM envoy\u00E9
 log.event.submitted_scorm_status                                = Statut SCORM envoy\u00E9
 log.event.subscribers_viewed                                    = Liste d'abonn\u00E9s consult\u00E9e
