--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Valutata conse
 log.event.submission_assessments_cleared                        = Eliminate valutazioni consegna
 log.event.submission_confirmation_form_viewed                   = Visualizzata scheda di conferma consegna
 log.event.submission_created                                    = Creata consegna
+log.event.submission_created_                                   = Creata consegna
 log.event.submission_deleted                                    = Eliminata consegna
+log.event.submission_deleted_                                   = Eliminata consegna
 log.event.submission_form_viewed                                = Visualizzata scheda di consegna
 log.event.submission_reassessed                                 = Valutata di nuovo consegna
 log.event.submission_updated                                    = Salvata consegna da parte di un utente
+log.event.submission_updated_                                   = Salvata consegna da parte di un utente
 log.event.submission_viewed                                     = Visualizzata consegna
+log.event.submission_viewed_                                    = Visualizzata consegna
 log.event.submitted_scorm_raw_score                             = Inviato punteggio SCORM grezzo
 log.event.submitted_scorm_status                                = Inviato stato SCORM
 log.event.subscribers_viewed                                    = Visualizzati sottoscrittori
