--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Abgabe beurtei
 log.event.submission_assessments_cleared                        = Abgabebeurteilungen gel\u00F6scht
 log.event.submission_confirmation_form_viewed                   = Abgabebest\u00E4tigungsformular angesehen
 log.event.submission_created                                    = Abgabe angelegt
+log.event.submission_created_                                   = Abgabe angelegt
 log.event.submission_deleted                                    = Abgabe gel\u00F6scht
+log.event.submission_deleted_                                   = Abgabe gel\u00F6scht
 log.event.submission_form_viewed                                = Abgabeformular angezeigt
 log.event.submission_reassessed                                 = Abgabe neu beurteilt
 log.event.submission_updated                                    = Nutzer/in hat L\u00F6sung gesichert.
+log.event.submission_updated_                                   = Nutzer/in hat L\u00F6sung gesichert.
 log.event.submission_viewed                                     = Abgabe angezeigt
+log.event.submission_viewed_                                    = Abgabe angezeigt
 log.event.submitted_scorm_raw_score                             = \u00DCbermittelte Punktzahl des Lernpakets
 log.event.submitted_scorm_status                                = \u00DCbermittelter Status des Lernpakets
 log.event.subscribers_viewed                                    = Abonnement/innen angezeigt
