--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -540,11 +540,15 @@ log.event.submission_assessed                                   = Submiss\u00E3o
 log.event.submission_assessments_cleared                        = Avalia\u00E7\u00F5es da submiss\u00E3o limpas
 log.event.submission_confirmation_form_viewed                   = Formul\u00E1rio de confirma\u00E7\u00E3o de submiss\u00E3o visualizado.
 log.event.submission_created                                    = Submiss\u00E3o criada.
+log.event.submission_created_                                   = Submiss\u00E3o criada.
 log.event.submission_deleted                                    = Submiss\u00E3o apagada
+log.event.submission_deleted_                                   = Submiss\u00E3o apagada
 log.event.submission_form_viewed                                = Formul\u00E1rio de submiss\u00E3o visualizado.
 log.event.submission_reassessed                                 = Submiss\u00E3o reavaliada
 log.event.submission_updated                                    = O utilizador guardou as altera\u00E7\u00F5es \u00E0 submiss\u00E3o.
+log.event.submission_updated_                                   = O utilizador guardou as altera\u00E7\u00F5es \u00E0 submiss\u00E3o.
 log.event.submission_viewed                                     = Submiss\u00E3o visualizada
+log.event.submission_viewed_                                    = Submiss\u00E3o visualizada
 log.event.submitted_scorm_raw_score                             = Nota bruta do SCORM submetida
 log.event.submitted_scorm_status                                = Estado do SCORM submetido
 log.event.subscribers_viewed                                    = Subscritores visualizados
