--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -710,7 +710,7 @@ tab.logs               = Registros
 tab.section            = Secci\u00F3n
 tab.visualization      = An\u00E1lisis visual
 
-text.all                = Seleccionar/Deseleccionar todos
+text.all                = Todos
 text.author             = Autores:
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.cache              = Archivos locales
@@ -737,6 +737,7 @@ text.recent             = Recientes
 text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
+text.selectall          = Seleccionar/Deseleccionar todos
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
 text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
