--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -710,7 +710,7 @@ tab.logs               = logs
 tab.section            = Sezione
 tab.visualization      = Visual analytic
 
-text.all                = Select/Deselect all
+text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = File locali
@@ -737,6 +737,7 @@ text.recent             = Recente
 text.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
+text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
