--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -710,7 +710,7 @@ tab.logs               = Registres
 tab.section            = Secci\u00F3
 tab.visualization      = Visual analytic
 
-text.all                = Select/Deselect all
+text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Els arxius locals
@@ -737,6 +737,7 @@ text.recent             = Recents
 text.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
 text.seconds            = Segons
 text.sectionplaceholder = Portada
+text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
