--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -710,7 +710,7 @@ tab.logs               = Les journaux
 tab.section            = Section
 tab.visualization      = Visual analytic
 
-text.all                = Select/Deselect all
+text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
@@ -737,6 +737,7 @@ text.recent             = R\u00E9cente
 text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
+text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
 text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
