More messages for logs downloading and parsing

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -158,12 +158,15 @@ initialRoles = Els rols inicials
 
 initialTypeTimes = unitat de temps predeterminat
 
+labe.parselog                     = S'est\u00E0 actualitzant el registre... (This process may take some time)
+
 label.categoryitem                = Categoria / article:
 label.close                       = Tanca
 label.component                   = Component:
 label.componentorevent            = Esdeveniment de component:
 label.course                      = Curs: 
 label.coursemodule                = M\u00F2duls del curs:
+label.downloadinglog              = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.enddate                     = Data de refer\u00E8ncia final:
 label.event                       = Esdeveniment:
 label.filter                      = Filtre ...
