--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -158,12 +158,15 @@ initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
 
+labe.parselog                     = Protokoll wird aktualisiert ... (This process may take some time)
+
 label.categoryitem                = Kategorie / Gegenstand:
 label.close                       = Schlie\u00DFen
 label.component                   = Komponente:
 label.componentorevent            = Komponentenereignis:
 label.course                      = Kurs: 
 label.coursemodule                = Kursmodule:
+label.downloadinglog              = Protokoll wird aktualisiert ... (This process may take some time)
 label.enddate                     = Enddatum:
 label.event                       = Veranstaltung:
 label.filter                      = Filter...
