--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -158,12 +158,15 @@ initialRoles = Initial Roles
 
 initialTypeTimes = Default time unit
 
+labe.parselog                     = Downloading logs... (This process may take some time)
+
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
 label.componentorevent            = Component\nEvent:
 label.course                      = Course: 
 label.coursemodule                = Course module:
+label.downloadinglog              = Updating log... (This process may take some time)
 label.enddate                     = End reference date: 
 label.event                       = Event: 
 label.filter                      = Filter...
@@ -188,7 +191,7 @@ label.selectcourse                = Please, select a course:
 label.setMax                      = Change suggested max scale: 
 label.startdate                   = Start reference date: 
 label.type                        = Type:
-label.updatinglog                 = Updating log... (This process may take some time)
+label.updatinglog                 = Parsing logs... (This process may take some time)
 label.user                        = User:
 label.welcome                     = Welcome
 label.withcompletion              = Completed Act.
