--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -158,12 +158,15 @@ initialRoles = Roles Iniciales
 
 initialTypeTimes = Unidad de tiempo predeterminado
 
+labe.parselog                     = Descargando los registros... (Este proceso puede tardar cierto tiempo)
+
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
 label.componentorevent            = Componente\nEvento:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos:
+label.downloadinglog              = Actualizando log... (Este proceso puede tardar cierto tiempo)
 label.enddate                     = Fecha de referencia final: 
 label.event                       = Evento:
 label.filter                      = Filtro...
@@ -188,7 +191,7 @@ label.selectcourse                = Por favor, seleccione un curso:
 label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
-label.updatinglog                 = Actualizando log... (Este proceso puede tardar cierto tiempo)
+label.updatinglog                 = Clasificando los registros... (Este proceso puede tardar cierto tiempo)
 label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
 label.withcompletion              = Act. Complet.
