--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -158,12 +158,15 @@ initialRoles = Le r\u00F4le initial
 
 initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
 
+labe.parselog                     = Mise \u00E0 jour du journal ... (This process may take some time)
+
 label.categoryitem                = Cat\u00E9gorie / article:
 label.close                       = Fermer
 label.component                   = Composant:
 label.componentorevent            = \u00C9v\u00E9nement de composant:
 label.course                      = Cours: 
 label.coursemodule                = Modules de cours:
+label.downloadinglog              = Mise \u00E0 jour du journal ... (This process may take some time)
 label.enddate                     = Date de r\u00E9f\u00E9rence finale:
 label.event                       = Un \u00E9v\u00E9nement:
 label.filter                      = Filtre...
