--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -158,12 +158,15 @@ initialRoles = Ruoli iniziali
 
 initialTypeTimes = unit\u00E0 di tempo predefinito
 
+labe.parselog                     = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
+
 label.categoryitem                = Categoria / Articolo:
 label.close                       = Vicino
 label.component                   = Componente:
 label.componentorevent            = Evento componente:
 label.course                      = Corso: 
 label.coursemodule                = Moduli del corso:
+label.downloadinglog              = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.enddate                     = Data di riferimento di fine:
 label.event                       = Evento:
 label.filter                      = Filtro...
