--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -158,12 +158,15 @@ initialRoles = Roles iniciais
 
 initialTypeTimes = unidade de tempo padr\u00E3o
 
+labe.parselog                     = Atualizando log ... (This process may take some time)
+
 label.categoryitem                = Categoria / Item:
 label.close                       = Perto
 label.component                   = Componente:
 label.componentorevent            = Evento Componente:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos do curso:
+label.downloadinglog              = Atualizando log ... (This process may take some time)
 label.enddate                     = Data de refer\u00EAncia final:
 label.event                       = Evento:
 label.filter                      = Filtro...
