--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -166,7 +166,7 @@ label.component                   = Componente:
 label.componentorevent            = Componente\nEvento:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos:
-label.downloadinglog              = Actualizando log... (Este proceso puede tardar cierto tiempo)
+label.downloadinglog              = Descargando log... (Este proceso puede tardar cierto tiempo)
 label.enddate                     = Fecha de referencia final: 
 label.event                       = Evento:
 label.filter                      = Filtro...
