--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -166,7 +166,7 @@ label.component                   = Component:
 label.componentorevent            = Component\nEvent:
 label.course                      = Course: 
 label.coursemodule                = Course module:
-label.downloadinglog              = Updating log... (This process may take some time)
+label.downloadinglog              = Downloading log... (This process may take some time)
 label.enddate                     = End reference date: 
 label.event                       = Event: 
 label.filter                      = Filter...
