Translate menu item of web view, refactor filechooser

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -721,6 +721,9 @@ text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Tage
 text.empty              = N.A
+text.exportcsv          = Export CSV
+text.exportcsvdesglosed = Export breakdown CSV
+text.exportpng          = Export PNG
 text.fail               = Fail
 text.favorite           = Als Favorit markiert
 text.future             = Future
