--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -721,6 +721,9 @@ text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.days               = d\u00EDas
 text.empty              = S.C
+text.exportcsv          = Exportar CSV
+text.exportcsvdesglosed = Exportar CSV desglosado
+text.exportpng          = Exportar PNG
 text.fail               = Suspenso
 text.favorite           = Destacados
 text.future             = Futuros
