Change jsoup to okhttp

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -158,8 +158,6 @@ initialRoles = Els rols inicials
 
 initialTypeTimes = unitat de temps predeterminat
 
-labe.parselog                     = S'est\u00E0 actualitzant el registre... (This process may take some time)
-
 label.categoryitem                = Categoria / article:
 label.close                       = Tanca
 label.component                   = Component:
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
+label.parselog                    = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.participants                = Participants
 label.pass                        = Contrasenya:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = S'est\u00E0 desant en local ...
 label.section                     = Seccions:
