--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -158,8 +158,6 @@ initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
 
-labe.parselog                     = Protokoll wird aktualisiert ... (This process may take some time)
-
 label.categoryitem                = Kategorie / Gegenstand:
 label.close                       = Schlie\u00DFen
 label.component                   = Komponente:
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
+label.parselog                    = Protokoll wird aktualisiert ... (This process may take some time)
 label.participants                = Teilnehmer
 label.pass                        = Passwort:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = Speichern in lokaler ...
 label.section                     = Abschnitt:
