--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -158,8 +158,6 @@ initialRoles = Roles Iniciales
 
 initialTypeTimes = Unidad de tiempo predeterminado
 
-labe.parselog                     = Descargando los registros... (Este proceso puede tardar cierto tiempo)
-
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
@@ -182,8 +180,10 @@ label.loggedin                    = Inicio sesi\u00F3n:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
+label.parselog                    = Descargando los registros... (Este proceso puede tardar cierto tiempo)
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
+label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
 label.rol                         = Rol:
 label.savelocal                   = Guardando en local...
 label.section                     = Secciones:
