--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -158,8 +158,6 @@ initialRoles = Le r\u00F4le initial
 
 initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
 
-labe.parselog                     = Mise \u00E0 jour du journal ... (This process may take some time)
-
 label.categoryitem                = Cat\u00E9gorie / article:
 label.close                       = Fermer
 label.component                   = Composant:
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
+label.parselog                    = Mise \u00E0 jour du journal ... (This process may take some time)
 label.participants                = Participants
 label.pass                        = Mot de passe:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = \u00C9conomiser en local ...
 label.section                     = Des sections:
