--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -158,8 +158,6 @@ initialRoles = Ruoli iniziali
 
 initialTypeTimes = unit\u00E0 di tempo predefinito
 
-labe.parselog                     = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
-
 label.categoryitem                = Categoria / Articolo:
 label.close                       = Vicino
 label.component                   = Componente:
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
+label.parselog                    = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.participants                = partecipanti
 label.pass                        = La password:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = Salvataggio in locale ...
 label.section                     = Sezioni:
