--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -158,8 +158,6 @@ initialRoles = Roles iniciais
 
 initialTypeTimes = unidade de tempo padr\u00E3o
 
-labe.parselog                     = Atualizando log ... (This process may take some time)
-
 label.categoryitem                = Categoria / Item:
 label.close                       = Perto
 label.component                   = Componente:
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
+label.parselog                    = Atualizando log ... (This process may take some time)
 label.participants                = Participantes
 label.pass                        = Senha:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = Salvando em locais ...
 label.section                     = Se\u00E7\u00F5es:
