--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -158,8 +158,6 @@ initialRoles = Initial Roles
 
 initialTypeTimes = Default time unit
 
-labe.parselog                     = Downloading logs... (This process may take some time)
-
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
@@ -182,8 +180,10 @@ label.loggedin                    = Logged in:
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
+label.parselog                    = Downloading logs... (This process may take some time)
 label.participants                = Participants
 label.pass                        = Password:
+label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
 label.savelocal                   = Saving in local...
 label.section                     = Section:
