Added view window for enrolled users

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -164,19 +164,26 @@ label.component                   = Component:
 label.componentorevent            = Esdeveniment de component:
 label.course                      = Curs: 
 label.coursemodule                = M\u00F2duls del curs:
+label.courses                     = Enrolled courses
 label.downloadinglog              = S'est\u00E0 actualitzant el registre... (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = Data de refer\u00E8ncia final:
 label.event                       = Esdeveniment:
 label.filter                      = Filtre ...
+label.firstaccess                 = First access Moodle
 label.group                       = Grup:
 label.groupbydate                 = Agrupar per:
+label.groups                      = Groups
 label.host                        = Amfitri\u00F3:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
 label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari...
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
 label.loadingstats                = Generant estad\u00EDstiques...
 label.loadingstudents             = S'han carregat les qualificacions dels estudiants...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
@@ -185,6 +192,7 @@ label.participants                = Participants
 label.pass                        = Contrasenya:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = S'est\u00E0 desant en local ...
 label.section                     = Seccions:
 label.selectcourse                = Seleccioneu un curs:
@@ -743,6 +751,7 @@ text.recent             = Recents
 text.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
 text.seconds            = Segons
 text.sectionplaceholder = Portada
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
