--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -164,19 +164,26 @@ label.component                   = Komponente:
 label.componentorevent            = Komponentenereignis:
 label.course                      = Kurs: 
 label.coursemodule                = Kursmodule:
+label.courses                     = Enrolled courses
 label.downloadinglog              = Protokoll wird aktualisiert ... (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = Enddatum:
 label.event                       = Veranstaltung:
 label.filter                      = Filter...
+label.firstaccess                 = First access Moodle
 label.group                       = Gruppe:
 label.groupbydate                 = Gruppiere nach:
+label.groups                      = Groups
 label.host                        = Wirt:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Letzte lokale Aktualisierung:
 label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer...
 label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
 label.loadingstats                = Statistiken werden erstellt...
 label.loadingstudents             = Sch\u00FClernoten geladen...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
@@ -185,6 +192,7 @@ label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = Speichern in lokaler ...
 label.section                     = Abschnitt:
 label.selectcourse                = Bitte w\u00E4hlen Sie einen Kurs aus:
@@ -743,6 +751,7 @@ text.recent             = K\u00FCrzlich\r\n
 text.restoredefault     = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
