--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -164,19 +164,26 @@ label.component                   = Componente:
 label.componentorevent            = Componente\nEvento:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos:
+label.courses                     = Cursos matriculados
 label.downloadinglog              = Descargando log... (Este proceso puede tardar cierto tiempo)
+label.email                       = Correo electr\u00F3nico
 label.enddate                     = Fecha de referencia final: 
 label.event                       = Evento:
 label.filter                      = Filtro...
+label.firstaccess                 = Primer acceso Moodle
 label.group                       = Grupo:
 label.groupbydate                 = Agrupar por: 
+label.groups                      = Grupos
 label.host                        = Host:
+label.lastaccess                  = \u00DAltimo acceso Moodle
+label.lastcourseaccess            = \u00DAltimo acceso Curso
 label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
 label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario...
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
 label.loadingstats                = Generando estadisticas...
 label.loadingstudents             = Calificaciones de alumnos cargadas...
 label.loggedin                    = Inicio sesi\u00F3n:
+label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
@@ -185,6 +192,7 @@ label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = Guardando en local...
 label.section                     = Secciones:
 label.selectcourse                = Por favor, seleccione un curso:
@@ -743,6 +751,7 @@ text.recent             = Recientes
 text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
+text.see                = Ver 
 text.selectall          = Seleccionar/Deseleccionar todos
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
