--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -164,19 +164,26 @@ label.component                   = Composant:
 label.componentorevent            = \u00C9v\u00E9nement de composant:
 label.course                      = Cours: 
 label.coursemodule                = Modules de cours:
+label.courses                     = Enrolled courses
 label.downloadinglog              = Mise \u00E0 jour du journal ... (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = Date de r\u00E9f\u00E9rence finale:
 label.event                       = Un \u00E9v\u00E9nement:
 label.filter                      = Filtre...
+label.firstaccess                 = First access Moodle
 label.group                       = Groupe:
 label.groupbydate                 = Par groupe:
+label.groups                      = Groups
 label.host                        = H\u00F4te:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Derni\u00E8re mise \u00E0 jour locale:
 label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur...
 label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
 label.loadingstats                = G\u00E9n\u00E9rer des statistiques...
 label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
@@ -185,6 +192,7 @@ label.participants                = Participants
 label.pass                        = Mot de passe:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = \u00C9conomiser en local ...
 label.section                     = Des sections:
 label.selectcourse                = Veuillez choisir un cours:
@@ -743,6 +751,7 @@ text.recent             = R\u00E9cente
 text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
