--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -164,19 +164,26 @@ label.component                   = Component:
 label.componentorevent            = Component\nEvent:
 label.course                      = Course: 
 label.coursemodule                = Course module:
+label.courses                     = Enrolled courses
 label.downloadinglog              = Downloading log... (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = End reference date: 
 label.event                       = Event: 
 label.filter                      = Filter...
+label.firstaccess                 = First access Moodle
 label.group                       = Group:
 label.groupbydate                 = Group by: 
+label.groups                      = Groups
 label.host                        = Host:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Last local update:
 label.loadingActivitiesCompletion = Downloading Activity Completion for each user...
 label.loadingqualifier            = Generating course gradebook... (This process may take some time)
 label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
@@ -185,6 +192,7 @@ label.participants                = Participants
 label.pass                        = Password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = Saving in local...
 label.section                     = Section:
 label.selectcourse                = Please, select a course:
@@ -743,6 +751,7 @@ text.recent             = Recent
 text.restoredefault     = Are you sure you want to restore the default settings?
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
