--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -164,19 +164,26 @@ label.component                   = Componente:
 label.componentorevent            = Evento componente:
 label.course                      = Corso: 
 label.coursemodule                = Moduli del corso:
+label.courses                     = Enrolled courses
 label.downloadinglog              = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = Data di riferimento di fine:
 label.event                       = Evento:
 label.filter                      = Filtro...
+label.firstaccess                 = First access Moodle
 label.group                       = Gruppo:
 label.groupbydate                 = Raggruppa per:
+label.groups                      = Groups
 label.host                        = Ospite:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Ultimo aggiornamento locale:
 label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente...
 label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
 label.loadingstats                = Generazione di statistiche...
 label.loadingstudents             = Voti degli studenti caricati...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
@@ -185,6 +192,7 @@ label.participants                = partecipanti
 label.pass                        = La password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = Salvataggio in locale ...
 label.section                     = Sezioni:
 label.selectcourse                = Per favore, seleziona un corso:
@@ -743,6 +751,7 @@ text.recent             = Recente
 text.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
