--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -164,19 +164,26 @@ label.component                   = Componente:
 label.componentorevent            = Evento Componente:
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos do curso:
+label.courses                     = Enrolled courses
 label.downloadinglog              = Atualizando log ... (This process may take some time)
+label.email                       = E-mail
 label.enddate                     = Data de refer\u00EAncia final:
 label.event                       = Evento:
 label.filter                      = Filtro...
+label.firstaccess                 = First access Moodle
 label.group                       = Grupo:
 label.groupbydate                 = Agrupar por:
+label.groups                      = Groups
 label.host                        = Hospedeiro:
+label.lastaccess                  = Last access Moodle
+label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = \u00DAltima atualiza\u00E7\u00E3o local:
 label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio...
 label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
 label.loadingstats                = Gerando estat\u00EDsticas...
 label.loadingstudents             = Notas do aluno carregado...
 label.loggedin                    = Logged in:
+label.ncourses                    = N\u00BA enrolled courses
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
@@ -185,6 +192,7 @@ label.participants                = Participantes
 label.pass                        = Senha:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.rol                         = Rol:
+label.roles                       = Roles
 label.savelocal                   = Salvando em locais ...
 label.section                     = Se\u00E7\u00F5es:
 label.selectcourse                = Por favor, selecione um curso:
@@ -743,6 +751,7 @@ text.recent             = Recentes
 text.restoredefault     = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
+text.see                = See 
 text.selectall          = Select/Deselect all
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
